--- a/pages/hire.html
+++ b/pages/hire.html
@@ -37,8 +37,8 @@
                         <input type="text" name="project" id="project" placeholder="Enter Project Title" required>
                     </div>
                     <div>
-                        <label for="budget">Budget</label>
-                        <input type="text" name="budget" id="budget" placeholder="Your Project Budget" required>
+                        <label for="budget">Budget ($)</label>
+                        <input type="number" name="budget" id="budget" placeholder="Your Project Budget" required>
                     </div>
                 </div>
                 <label for="description">Project Description</label>
