--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     <i class="fas fa-code"></i>
                     <h2>Website Design</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quae adipisci dolorum!</p>
-                    <a href="#" class="btn">See More <i class="fa fa-arrow-right"></i></a>
+                    <a href="#service1" class="btn service1-btn">See More <i class="fa fa-arrow-right"></i></a>
                 </div>
             </div>
             <div>
@@ -176,7 +176,7 @@
                     <i class="fas fa-image"></i>
                     <h2>UI/UX Design</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quae adipisci dolorum!</p>
-                    <a href="#" class="btn">See More <i class="fa fa-arrow-right"></i></a>
+                    <a href="#service2" class="btn service2-btn">See More <i class="fa fa-arrow-right"></i></a>
                 </div>
             </div>
             <div>
@@ -184,7 +184,7 @@
                     <i class="fab fa-wordpress"></i>
                     <h2>WordPress</h2>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quae adipisci dolorum!</p>
-                    <a href="#" class="btn">See More <i class="fa fa-arrow-right"></i></a>
+                    <a href="#service3" class="btn service3-btn">See More <i class="fa fa-arrow-right"></i></a>
                 </div>
             </div>
         </div>
@@ -319,6 +319,37 @@
             </div>
     </div>
 </footer>
+<!-- Popups -->
+<section class="popup-section service1-popup">
+    <main class="popup">
+        <i class="popup-cross fas fa-times"></i>
+        <h2 class="popup-title">Web Design</h2>
+        <div class="popup-body">
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate ducimus, obcaecati commodi tempore iure nulla, ipsum perferendis quaerat quidem doloribus distinctio incidunt dolores esse officiis.</p>
+            <a href="pages/hire.html" class="btn">Hire Me <i class="fa fa-arrow-right"></i></a>
+        </div>
+    </main>
+</section>
+<section class="popup-section service2-popup">
+    <main class="popup">
+        <i class="popup-cross fas fa-times"></i>
+        <h2 class="popup-title">UI/UX Desing</h2>
+        <div class="popup-body">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui soluta doloribus distinctio quisquam velit ipsa quam error accusamus blanditiis nulla quas consectetur, vero tenetur molestias?</p>
+            <a href="pages/hire.html" class="btn">Hire Me <i class="fa fa-arrow-right"></i></a>
+        </div>
+    </main>
+</section>
+<section class="popup-section service3-popup">
+    <main class="popup">
+        <i class="popup-cross fas fa-times"></i>
+        <h2 class="popup-title">WordPress</h2>
+        <div class="popup-body">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum distinctio, ea vitae nisi deleniti officiis doloribus sint amet. Sapiente labore, ipsum magni voluptate mollitia earum.</p>
+            <a href="pages/hire.html" class="btn">Hire Me <i class="fa fa-arrow-right"></i></a>
+        </div>
+    </main>
+</section>
 <!-- Messenger Chat Plugin -->
 <div id="fb-root"></div>
 <div id="fb-customer-chat" class="fb-customerchat"></div>
