--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                     <input type="hidden" name="_subject" value="Contact from Website!">
                     <input type="hidden" name="_captcha" value="false">
                     <input type="hidden" name="_template" value="table">
-                    <input type="hidden" name="_next" value="https://dev.zihadshoe.com/pages/thank-you.html">
+                    <input type="hidden" name="_next" value="https://ashik-himel.github.io/portfolio_ashik-himel/pages/thank-you.html">
                 </form>
             </div>
         </div>
