--- a/pages/hire.html
+++ b/pages/hire.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hire Me :: Ashik-Himel</title>
-    <link rel="shortcut icon" href="/images/site-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/site-icon.png" type="image/x-icon">
     <!-- FontAwesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body id="hire-body">
 <main class="hire-section">
     <div class="container">
-        <a href="/index.html"><i class="go-back fa fa-arrow-left"></i></a>
+        <a href="../index.html"><i class="go-back fa fa-arrow-left"></i></a>
         <div class="title-area">
             <h2><span class="text-primary">Hire</span> Me</h2>
             <p>Hire me for your upcomming project</p>
@@ -49,7 +49,7 @@
                 <input type="hidden" name="_subject" value="Hire Offer from Website!">
                 <input type="hidden" name="_captcha" value="false">
                 <input type="hidden" name="_template" value="table">
-                <input type="hidden" name="_next" value="https://dev.zihadshoe.com/pages/thank-you.html">
+                <input type="hidden" name="_next" value="https://ashik-himel.github.io/portfolio_ashik-himel/pages/thank-you.html">
             </form>
         </div>
     </div>
