--- a/pages/thank-you.html
+++ b/pages/thank-you.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank You :: Ashik-Himel</title>
-    <link rel="shortcut icon" href="/images/site-icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/site-icon.png" type="image/x-icon">
     <!-- FontAwesome CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 <main class="thank-section">
@@ -19,7 +19,7 @@
             <p>Thank you for submiting this form. We'll contact with you as soon as possible.</p>
         </div>
         <div>
-            <a href="/" class="btn">Return Home <i class="fas fa-share-square"></i></a>
+            <a href="../index.html" class="btn">Return Home <i class="fas fa-share-square"></i></a>
         </div>
     </div>
 </main>
