skills and theme enabled

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </nav>
         </div>
         <div class="header-icons">
-          <i class="fa-solid fa-sun"></i>
+          <i class="fa-solid fa-sun" id="theme-toggler"></i>
           <div class="nav-toggler">
             <span></span>
             <span></span>
@@ -264,6 +264,128 @@
     </section>
 
     <!-- My Skills Section -->
+    <section class="skills-section" id="skills">
+      <div class="container-box">
+        <h2>My <span class="colored-text">Skills</span></h2>
+        <span>Here are some technologies where I am skilled on and I am working with those technologies.</span>
+        <div class="flex-box">
+          <div class="left-div">
+            <div class="skill-box">
+              <div class="skill-details">
+                <span>HTML</span>
+                <span class="skill-percent">95%</span>
+              </div>
+              <div class="progress-area">
+                <div class="progress-wrapper">
+                  <div class="progress-status" style="width: 95%;"></div>
+                </div>
+              </div>
+            </div>
+            <div class="skill-box">
+              <div class="skill-details">
+                <span>CSS</span>
+                <span class="skill-percent">90%</span>
+              </div>
+              <div class="progress-area">
+                <div class="progress-wrapper">
+                  <div class="progress-status" style="width: 90%;"></div>
+                </div>
+              </div>
+            </div>
+            <div class="skill-box">
+              <div class="skill-details">
+                <span>Bootstrap</span>
+                <span class="skill-percent">85%</span>
+              </div>
+              <div class="progress-area">
+                <div class="progress-wrapper">
+                  <div class="progress-status" style="width: 85%;"></div>
+                </div>
+              </div>
+            </div>
+            <div class="skill-box">
+              <div class="skill-details">
+                <span>Tailwind CSS</span>
+                <span class="skill-percent">85%</span>
+              </div>
+              <div class="progress-area">
+                <div class="progress-wrapper">
+                  <div class="progress-status" style="width: 85%;"></div>
+                </div>
+              </div>
+            </div>
+            <div class="skill-box">
+              <div class="skill-details">
+                <span>JavaScript</span>
+                <span class="skill-percent">75%</span>
+              </div>
+              <div class="progress-area">
+                <div class="progress-wrapper">
+                  <div class="progress-status" style="width: 75%;"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="right-div">
+            <div class="skill-box">
+              <div class="skill-details">
+                <span>React JS</span>
+                <span class="skill-percent">85%</span>
+              </div>
+              <div class="progress-area">
+                <div class="progress-wrapper">
+                  <div class="progress-status" style="width: 85%;"></div>
+                </div>
+              </div>
+            </div>
+            <div class="skill-box">
+              <div class="skill-details">
+                <span>Firebase</span>
+                <span class="skill-percent">80%</span>
+              </div>
+              <div class="progress-area">
+                <div class="progress-wrapper">
+                  <div class="progress-status" style="width: 80%;"></div>
+                </div>
+              </div>
+            </div>
+            <div class="skill-box">
+              <div class="skill-details">
+                <span>Python</span>
+                <span class="skill-percent">80%</span>
+              </div>
+              <div class="progress-area">
+                <div class="progress-wrapper">
+                  <div class="progress-status" style="width: 80%;"></div>
+                </div>
+              </div>
+            </div>
+            <div class="skill-box">
+              <div class="skill-details">
+                <span>C</span>
+                <span class="skill-percent">95%</span>
+              </div>
+              <div class="progress-area">
+                <div class="progress-wrapper">
+                  <div class="progress-status" style="width: 95%;"></div>
+                </div>
+              </div>
+            </div>
+            <div class="skill-box">
+              <div class="skill-details">
+                <span>C++</span>
+                <span class="skill-percent">80%</span>
+              </div>
+              <div class="progress-area">
+                <div class="progress-wrapper">
+                  <div class="progress-status" style="width: 80%;"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- My Services Section -->
     <section class="services-section" id="services">
