--- a/index.html
+++ b/index.html
@@ -267,7 +267,10 @@
     <section class="skills-section" id="skills">
       <div class="container-box">
         <h2>My <span class="colored-text">Skills</span></h2>
-        <span>Here are some technologies where I am skilled on and I am working with those technologies.</span>
+        <span
+          >Here are some technologies where I am skilled on and I am working
+          with those technologies.</span
+        >
         <div class="flex-box">
           <div class="left-div">
             <div class="skill-box">
@@ -277,7 +280,7 @@
               </div>
               <div class="progress-area">
                 <div class="progress-wrapper">
-                  <div class="progress-status" style="width: 95%;"></div>
+                  <div class="progress-status" style="width: 95%"></div>
                 </div>
               </div>
             </div>
@@ -288,7 +291,7 @@
               </div>
               <div class="progress-area">
                 <div class="progress-wrapper">
-                  <div class="progress-status" style="width: 90%;"></div>
+                  <div class="progress-status" style="width: 90%"></div>
                 </div>
               </div>
             </div>
@@ -299,7 +302,7 @@
               </div>
               <div class="progress-area">
                 <div class="progress-wrapper">
-                  <div class="progress-status" style="width: 85%;"></div>
+                  <div class="progress-status" style="width: 85%"></div>
                 </div>
               </div>
             </div>
@@ -310,7 +313,7 @@
               </div>
               <div class="progress-area">
                 <div class="progress-wrapper">
-                  <div class="progress-status" style="width: 85%;"></div>
+                  <div class="progress-status" style="width: 85%"></div>
                 </div>
               </div>
             </div>
@@ -321,7 +324,7 @@
               </div>
               <div class="progress-area">
                 <div class="progress-wrapper">
-                  <div class="progress-status" style="width: 75%;"></div>
+                  <div class="progress-status" style="width: 75%"></div>
                 </div>
               </div>
             </div>
@@ -334,7 +337,7 @@
               </div>
               <div class="progress-area">
                 <div class="progress-wrapper">
-                  <div class="progress-status" style="width: 85%;"></div>
+                  <div class="progress-status" style="width: 85%"></div>
                 </div>
               </div>
             </div>
@@ -345,7 +348,7 @@
               </div>
               <div class="progress-area">
                 <div class="progress-wrapper">
-                  <div class="progress-status" style="width: 80%;"></div>
+                  <div class="progress-status" style="width: 80%"></div>
                 </div>
               </div>
             </div>
@@ -356,7 +359,7 @@
               </div>
               <div class="progress-area">
                 <div class="progress-wrapper">
-                  <div class="progress-status" style="width: 80%;"></div>
+                  <div class="progress-status" style="width: 80%"></div>
                 </div>
               </div>
             </div>
@@ -367,7 +370,7 @@
               </div>
               <div class="progress-area">
                 <div class="progress-wrapper">
-                  <div class="progress-status" style="width: 95%;"></div>
+                  <div class="progress-status" style="width: 95%"></div>
                 </div>
               </div>
             </div>
@@ -378,7 +381,7 @@
               </div>
               <div class="progress-area">
                 <div class="progress-wrapper">
-                  <div class="progress-status" style="width: 80%;"></div>
+                  <div class="progress-status" style="width: 80%"></div>
                 </div>
               </div>
             </div>
