--- a/pages/thank-you.html
+++ b/pages/thank-you.html
@@ -7,7 +7,7 @@
     <title>Thank You :: Ashik-Himel</title>
     <link
       rel="shortcut icon"
-      href="/assets/images/favicon.png"
+      href="../assets/images/favicon.png"
       type="image/x-icon"
     />
     <!-- Fontawesome CDN -->
@@ -16,7 +16,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/assets/css/main.css" />
+    <link rel="stylesheet" href="../assets/css/main.css" />
   </head>
   <body>
     <main class="thank-section">
@@ -35,5 +35,12 @@
         </div>
       </div>
     </main>
+
+    <script>
+      // Theme Toggler
+      if (localStorage.getItem("themeValue") == "1") {
+        document.querySelector("html").classList.add("light");
+      }
+    </script>
   </body>
 </html>
