works page and light theme default

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           </nav>
         </div>
         <div class="header-icons">
-          <i class="fa-solid fa-sun" id="theme-toggler"></i>
+          <i class="fa-solid fa-moon" id="theme-toggler"></i>
           <div class="nav-toggler">
             <span></span>
             <span></span>
@@ -187,7 +187,7 @@
               <hr />
               <p>
                 I am studying in B.Sc in CSE in Uttara University. My expected
-                graduation year is 2026. My current CGPA 3.83.
+                graduation year is 2026. My current CGPA 3.93.
               </p>
             </div>
             <div class="card-box">
@@ -211,11 +211,11 @@
           </div>
           <div class="courses-card">
             <div class="card-box">
-              <h3>Frontend Web Dev.</h3>
+              <h3>Complete Web Dev.</h3>
               <span>Programming Hero</span>
               <hr />
               <p>
-                I completed Frontend Web Developement course from Programming
+                I completed "Complete Web Developement" course from Programming
                 Hero in 2023. My batch no. was 8.
               </p>
             </div>
@@ -224,8 +224,8 @@
               <span>Interactive Care</span>
               <hr />
               <p>
-                I completed Full Stack Web Developement course from Interactive
-                Care in 2021. My batch no. was 2.
+                I completed "Full Stack Web Developement" course from
+                Interactive Care in 2021. My batch no. was 2.
               </p>
             </div>
             <div class="card-box">
@@ -233,7 +233,7 @@
               <span>Digital Computer Academy</span>
               <hr />
               <p>
-                I completed Basic Computer Application (360 Hours) course from
+                I completed "Basic Computer Application (360 Hours)" course from
                 Digital Computer Training Academy in 2020.
               </p>
             </div>
@@ -250,7 +250,7 @@
         <div class="card-area">
           <div class="experiences-card">
             <div class="card-box">
-              <h3>eComm Manager</h3>
+              <h3>eComm. Manager</h3>
               <span>Zihad Shoe</span>
               <hr />
               <p>
@@ -398,21 +398,21 @@
         <div class="card-area">
           <div class="services-card">
             <div class="card-box">
-              <h3>Website Design</h3>
+              <h3>Frontend Web Dev.</h3>
               <span>HTML, CSS, JavaScript</span>
               <hr />
               <p>
-                I can design website, clone website with pixel perfect and
+                I can develope website, clone website with pixel perfect and
                 responsively with HTML, CSS, Bootstrap, Tailwind CSS,
                 JavaScript.
               </p>
             </div>
             <div class="card-box">
-              <h3>Single Page Design</h3>
+              <h3>Single Page Dev.</h3>
               <span>React JS</span>
               <hr />
               <p>
-                I can design website, clone website with pixel perfect and
+                I can develope website, clone website with pixel perfect and
                 responsively with React JS. In addition, I use JSX, CSS and
                 JavaScript.
               </p>
@@ -495,6 +495,9 @@
             </div>
           </div>
         </div>
+        <a href="pages/portfolio.html" class="button"
+          >View All <i class="fa-solid fa-arrow-right"></i
+        ></a>
       </div>
     </section>
 
@@ -647,5 +650,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JavaScript -->
     <script src="assets/js/main.js"></script>
+    <script src="assets/js/header-footer.js"></script>
   </body>
 </html>
