--- a/pages/thank-you.html
+++ b/pages/thank-you.html
@@ -39,7 +39,7 @@
     <script>
       // Theme Toggler
       if (localStorage.getItem("themeValue") == "1") {
-        document.querySelector("html").classList.add("light");
+        document.querySelector("html").classList.add("dark");
       }
     </script>
   </body>
