image, toggler icon, button-group

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       href="assets/images/favicon.png"
       type="image/x-icon"
     />
+    <!-- Google Icon -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
     <!-- Fontawesome CDN -->
     <link
       rel="stylesheet"
@@ -79,7 +84,9 @@
           </nav>
         </div>
         <div class="header-icons">
-          <i class="fa-solid fa-moon" id="theme-toggler"></i>
+          <span class="material-symbols-sharp" id="theme-toggler">
+            light_mode
+          </span>
           <div class="nav-toggler">
             <span></span>
             <span></span>
