--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -70,9 +70,7 @@
     <section class="works-title-section">
       <div class="container-box">
         <div class="breadcrumbs">
-          <ul>
-            <li><a href="../">Home</a> / <span>My Works</span></li>
-          </ul>
+          <a href="../">Home</a> / <span>My Works</span>
         </div>
         <h2>My <span class="colored-text">Works</span></h2>
       </div>
