--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -9,6 +9,11 @@
       href="../assets/images/favicon.png"
       type="image/x-icon"
     />
+    <!-- Box Icon -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <!-- Fontawesome CDN -->
     <link
       rel="stylesheet"
@@ -56,7 +61,14 @@
           </nav>
         </div>
         <div class="header-icons">
-          <i class="fa-solid fa-moon" id="theme-toggler"></i>
+          <div>
+            <input type="checkbox" name="theme-toggler" id="theme-toggler" />
+            <label for="theme-toggler" id="theme-toggler-label">
+              <i class="bx bxs-sun"></i>
+              <i class="bx bxs-moon"></i>
+              <span class="round"></span>
+            </label>
+          </div>
           <div class="nav-toggler">
             <span></span>
             <span></span>
@@ -91,7 +103,11 @@
                 </div>
               </div>
               <div class="works-info">
-                <span>HTML, CSS, JavaScript</span>
+                <div>
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JavaScript</span>
+                </div>
                 <h3>
                   Media Max - Authorized Distributor of Banglalink Digital
                 </h3>
@@ -112,7 +128,11 @@
                 </div>
               </div>
               <div class="works-info">
-                <span>HTML, CSS, JavaScript</span>
+                <div>
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JavaScript</span>
+                </div>
                 <h3>Learn with Ashik-Himel :: Learn Programming Language</h3>
               </div>
             </div>
@@ -129,7 +149,11 @@
                 </div>
               </div>
               <div class="works-info">
-                <span>HTML, CSS, JavaScript</span>
+                <div>
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JavaScript</span>
+                </div>
                 <h3>
                   Asif Ahamed :: Managing Director of Media Max, Media Link,
                   etc.
