--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       href="assets/images/favicon.png"
       type="image/x-icon"
     />
-    <!-- Google Icon -->
+    <!-- Box Icon -->
     <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
     <!-- Fontawesome CDN -->
     <link
@@ -84,9 +84,14 @@
           </nav>
         </div>
         <div class="header-icons">
-          <span class="material-symbols-sharp" id="theme-toggler">
-            light_mode
-          </span>
+          <div>
+            <input type="checkbox" name="theme-toggler" id="theme-toggler" />
+            <label for="theme-toggler" id="theme-toggler-label">
+              <i class="bx bxs-sun"></i>
+              <i class="bx bxs-moon"></i>
+              <span class="round"></span>
+            </label>
+          </div>
           <div class="nav-toggler">
             <span></span>
             <span></span>
@@ -458,7 +463,11 @@
                 </div>
               </div>
               <div class="works-info">
-                <span>HTML, CSS, JavaScript</span>
+                <div>
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JavaScript</span>
+                </div>
                 <h3>
                   Media Max - Authorized Distributor of Banglalink Digital
                 </h3>
@@ -479,7 +488,11 @@
                 </div>
               </div>
               <div class="works-info">
-                <span>HTML, CSS, JavaScript</span>
+                <div>
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JavaScript</span>
+                </div>
                 <h3>Learn with Ashik-Himel :: Learn Programming Language</h3>
               </div>
             </div>
@@ -493,7 +506,11 @@
                 </div>
               </div>
               <div class="works-info">
-                <span>HTML, CSS, JavaScript</span>
+                <div>
+                  <span>HTML</span>
+                  <span>CSS</span>
+                  <span>JavaScript</span>
+                </div>
                 <h3>
                   Asif Ahamed :: Managing Director of Media Max, Media Link,
                   etc.
